# Smart-Official-Cloud

./: README.md  start-all.bat  stop-all.bat  云服务器部署安全配置指南.md  用户管理功能说明.md
backend/: .env  .env.example  DeepSeek_AI_配置说明.md  OCR_API_配置说明.md  check_categories.py  execute_mode_tables.py  init_all_data.py  install_requests.bat  medicine_admin.sql  pyproject.toml  quick_reset_password.py  reset_admin_password.py  reset_batches.py  reset_password.py  start.bat  update_categories.py  多场景数据表隔离功能已完成.md  多场景数据表隔离完成总结.md  多场景数据表隔离实施说明.md  多场景数据表隔离方案.md  多场景数据隔离已启用.md  安全防护说明.md  短信推送服务说明.md  短信通知配置说明.md
backend/alembic/: env.py
backend/alembic/versions/: ad58a46441a8_add_multi_mode_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: app_version.py  auth.py  dashboard.py  deps.py  inventory.py  medicines.py  notifications.py  ocr.py  reports.py  sms.py  system.py  trace_code.py  users.py  warnings.py
backend/app/core/: anti_crawler.py  config.py  database.py  exceptions.py  init_db.py  security.py  security_middleware.py
backend/app/models/: __init__.py  base.py  inventory.py  log.py  medicine.py  mode_models.py  notification.py  ocr.py  sms.py  user.py  warning.py
backend/app/repositories/: __init__.py  medicine.py  user.py
backend/app/schemas/: auth.py  common.py  inventory.py  medicine.py  user.py
backend/app/services/: alihealth_api.py  auth.py  dashboard.py  deepseek_ai.py  inventory.py  inventory_mode.py  medicine.py  ocr.py  (+9 more)
backend/scripts/: backup_config.env  backup_database.py  setup_backup_cron.sh  setup_backup_windows.bat  数据库备份使用说明.md
(+117 files in other folders)
